@@ -25,36 +25,36 @@ import java.util.List;
 @ConditionalOnProperty(prefix = "security", name = "enabled", havingValue = "true", matchIfMissing = true)
 public class SecurityConfig {
 
-    @Bean
-    public UserDetailsService userDetailsService() {
-        // 内存用户模拟
-        UserDetails user = User.withUsername("user")
-                .password(passwordEncoder().encode("123456"))
-                .roles("USER")
-                .build();
-
-        UserDetails admin = User.withUsername("admin")
-                .password(passwordEncoder().encode("123456"))
-                .roles("ADMIN")
-                .build();
-
-        return new InMemoryUserDetailsManager(user, admin);
-    }
-
+//    @Bean
+//    public UserDetailsService userDetailsService() {
+//        // 内存用户模拟
+//        UserDetails user = User.withUsername("user")
+//                .password(passwordEncoder().encode("123456"))
+//                .roles("USER")
+//                .build();
+//
+//        UserDetails admin = User.withUsername("admin")
+//                .password(passwordEncoder().encode("123456"))
+//                .roles("ADMIN")
+//                .build();
+//
+//        return new InMemoryUserDetailsManager(user, admin);
+//    }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("http://localhost:8090","http://localhost:8081")); // ✅ 用 allowedOriginPatterns 替代 allowedOrigins
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedOriginPatterns(List.of("http://localhost:8090", "http://localhost:8081", "http://localhost:80"));
+        configuration.setAllowCredentials(true);
         configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true); // ✅ 与 patterns 一起合法
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
+
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -63,31 +63,24 @@ public class SecurityConfig {
 
     /**
      * 配置安全过滤链，分别是全通过和拦截
+     *
      * @param http
      * @return
      * @throws Exception
      */
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(AbstractHttpConfigurer::disable)   // 推荐用法
-                .authorizeHttpRequests(auth -> auth.anyRequest().permitAll());
-
-        return http.build();
-    }
-//    @Bean
-//    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-//        return http
-//                .csrf(AbstractHttpConfigurer::disable) // ✅ 禁用 CSRF
-//                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // ✅ 开启 CORS 支持
+        return http
+                .csrf(AbstractHttpConfigurer::disable) // ✅ 禁用 CSRF
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // ✅ 开启 CORS 支持
 //                .authorizeHttpRequests(auth -> auth
 //                        .requestMatchers("/user/register/**", "/user/login/**").permitAll() // ✅ 注册接口放行
 //                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
 //                        .requestMatchers("/admin/**").hasRole("ADMIN")
 //                        .anyRequest().authenticated()
 //                )
-//                .httpBasic(Customizer.withDefaults())
-//                .build();
-//    }
+                .httpBasic(Customizer.withDefaults())
+                .build();
+    }
 }
 
